--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@ limitations under the License.
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-vision</artifactId>
+      <version>1.55.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
