--- a/pom.xml
+++ b/pom.xml
@@ -107,10 +107,25 @@ limitations under the License.
     </dependency>
 
     <dependency>
-      <groupId>com.google.cloud</groupId>
-      <artifactId>google-cloud-vision</artifactId>
-      <version>1.55.0</version>
+  <groupId>com.google.cloud</groupId>
+  <artifactId>google-cloud-vision</artifactId>
+  <version>1.66.0</version>
+</dependency>
+
+<!-- 
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-tcnative-boringssl-static</artifactId>
+      <version>2.0.3.Final</version>
     </dependency>
+
+    https://mvnrepository.com/artifact/com.github.jai-imageio/jai-imageio-core
+<dependency>
+    <groupId>com.github.jai-imageio</groupId>
+    <artifactId>jai-imageio-core</artifactId>
+    <version>1.3.0</version>
+</dependency> -->
+
 
   </dependencies>
 
