--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@ limitations under the License.
       <scope>provided</scope>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.google.api/gax -->
+<dependency>
+    <groupId>com.google.api</groupId>
+    <artifactId>gax</artifactId>
+    <version>1.43.0</version>
+</dependency>
+
     <dependency>
       <groupId>com.google.appengine</groupId>
       <artifactId>appengine-api-1.0-sdk</artifactId>
